# go2standup

./: Dockerfile  docker-compose.yml  readme.md  setup.sh
.devcontainer/: devcontainer.json  docker-compose.yml
app/: Cargo.toml  build.sh  index.html  serve.sh  setup.sh
app/doc/: index-f6cea635ac82dc09_bg.wasm
app/schemas/: schema.graphql
app/src/: components.rs  ctx.rs  main.rs  repository.rs
app/src/components/: footer.rs  header.rs  meeting.rs  member_card.rs  member_list.rs  parking_lot.rs  prepare_members.rs  typography.rs
app/src/ctx/: meeting.rs  styles.rs
app/src/data/: meeting.rs  member.rs
app/src/repository/: api.rs  gql_protocol.rs  local_repository.rs  storage.rs
app/src/repository/gql/: add_member.graphql  create_meeting.graphql  fetch_meeting.graphql  new_leader.graphql  remove_member.graphql  shuffle_members.graphql  subscription_meeting.graphql  update_member.graphql  update_memo.graphql
docs/: index-638f4c22240cbd36.js  index-638f4c22240cbd36_bg.wasm  index-7fe240948a4bf3e2.js  index-7fe240948a4bf3e2_bg.wasm  index-af6f1e4feccdc1f8.js  index-af6f1e4feccdc1f8_bg.wasm  index-c7ecc79668a1cad9.js  index-c7ecc79668a1cad9_bg.wasm  index-f6cea635ac82dc09.js  index.html
server/: Cargo.toml  dev.sh
server/src/: main.rs
server/src/models/: meeting.rs
