[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2.79"
web-sys = "0.3.56"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-timers = "0.2.3"
rand = { version = "0.6.3", features = ["wasm-bindgen"] }
serde_json = "1.0.79"
serde = "1.0.136"
