[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2.79"
web-sys = "0.3.56"
js-sys = "0.3.56"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-timers = "0.2.3"
rand = { version = "0.6.3", features = ["wasm-bindgen"] }
serde_json = "1.0.79"
serde = "1.0.136"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
graphql_client = { version = "0.10.0", features = ["reqwest"] }
graphql-ws-client = { version = "0.2", features = ["client-graphql-client"] }
reqwest = "0.11.10"
