[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
async-graphql = "3.0.35"
async-graphql-actix-web = "3.0.35"
slab = "0.4.2"
futures = "0.3.0"
redis = "0.21.5"
serde_json = "1.0.79"
serde = "1.0.136"
uuid = { version = "0.8", features = ["serde", "v4"] }
